// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildStageSpecifications tests clicking on description and tags shows corresponding inputs 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Stage Details
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                >
                  <div
                    class="InputWithIdentifier---txtNameContainer--20iZ"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                    >
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="InputWithIdentifier---idInput--w8_T"
                        contenteditable="true"
                      />
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group fields"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Stage Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            placeholder="Enter your stage name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="addDataLinks"
                  />
                </div>
                <div
                  class="fields"
                >
                  <span
                    class="removeLink"
                  >
                    remove
                  </span>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="description"
                    >
                      Description
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <textarea
                        autocomplete="off"
                        class="bp3-input bp3-fill"
                        name="description"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="fields"
                >
                  <span
                    class="removeLink"
                  >
                    remove
                  </span>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="tags"
                    >
                      Tags
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper TagInput---tagInput--1eAz bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="bp3-input bp3-tag-input bp3-fill bp3-multi-select TagInput---input--2yQS"
                            >
                              <div
                                class="bp3-tag-input-values"
                              >
                                <span
                                  class="bp3-tag bp3-minimal TagInput---tag--2ZBU TagInput---addTagButton--1ENX"
                                  data-tag-index="0"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    + tag
                                  </span>
                                  <button
                                    class="bp3-tag-remove"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-small-cross"
                                      icon="small-cross"
                                    >
                                      <svg
                                        data-icon="small-cross"
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                      >
                                        <desc>
                                          small-cross
                                        </desc>
                                        <path
                                          d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                                <input
                                  class="bp3-input-ghost bp3-multi-select-tag-input-input"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <label
                  class="bp3-control bp3-switch StyledProps---font--2ipy Switch---switch--36ug StyledProps---main--1Wws"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Clone Codebase
                </label>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Workspace and shared paths
              </p>
            </div>
            <form
              class="FormikForm---main--1N87 fields"
            >
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Workspace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="workspace-0"
                    style="flex-grow: 1;"
                  >
                    
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput---input--36mQ"
                        >
                          <input
                            class="bp3-input"
                            name="workspace"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                            >
                              <span
                                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="#009dff"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Shared Paths
                </p>
                <div>
                  <button
                    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      + Path
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Variables
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws addVariable StyledProps---intent-primary--2Xgi"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    + Add Variable
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildStageSpecifications tests renders correctly 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 100%;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <div
            class="section noPadTop"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Stage Details
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                >
                  <div
                    class="InputWithIdentifier---txtNameContainer--20iZ"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                    >
                      <p
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="InputWithIdentifier---idInput--w8_T"
                        contenteditable="true"
                      />
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group fields"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Stage Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            placeholder="Enter your stage name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="addDataLinks"
                  >
                    <button
                      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-plus StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                        icon="plus"
                      >
                        <svg
                          data-icon="plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            plus
                          </desc>
                          <path
                            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        description
                      </span>
                    </button>
                    <button
                      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-plus StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                        icon="plus"
                      >
                        <svg
                          data-icon="plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            plus
                          </desc>
                          <path
                            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        tags
                      </span>
                    </button>
                  </div>
                </div>
                
                <label
                  class="bp3-control bp3-switch StyledProps---font--2ipy Switch---switch--36ug StyledProps---main--1Wws"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Clone Codebase
                </label>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Workspace and shared paths
              </p>
            </div>
            <form
              class="FormikForm---main--1N87 fields"
            >
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Workspace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    class="bp3-form-group"
                    data-id="workspace-0"
                    style="flex-grow: 1;"
                  >
                    
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                      >
                        <div
                          class="bp3-input-group MultiTypeInput---input--36mQ"
                        >
                          <input
                            class="bp3-input"
                            name="workspace"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                            >
                              <span
                                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="#009dff"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ StyledProps---margin-bottom-xsmall--N8Iq"
                >
                  Shared Paths
                </p>
                <div>
                  <button
                    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      + Path
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
          <div
            class="section"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws specTabs StyledProps---flex--2Jz8"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-weight-semi-bold--QRXr"
              >
                Variables
              </p>
            </div>
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws addVariable StyledProps---intent-primary--2Xgi"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    + Add Variable
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
